# mavsdk-cpp-socket-client

./: README.md
src/: CMakeLists.txt  client.cpp  client_actual.cpp  client_nothing.cpp  client_shovan.cpp  takeoff_and_land_and_data.cpp
web/: package-lock.json  package.json
